--- a/scss/_top-bar.scss
+++ b/scss/_top-bar.scss
@@ -130,10 +130,4 @@ ul.dropdown {
 
 .topbar-mobile.relawan {
 	position: relative;
-	nav.top-bar.expanded {
-		position: absolute;
-		bottom: 0;
-		z-index: 150;
-		width: 100%;
-	}
 }
